# ork-website-backend

./: Cargo.toml  README.md
migrations/: 20231020041309_create_users_table.sql  20231020041310_create_sessions_table.sql  20231022012627_create_regions_table.sql  20231022012628_create_tiers_table.sql  20231022012629_create_organizations_table.sql  20231022184054_create_organization_members_table.sql  20231024032904_create_proxy_templates_table.sql  20231026172714_create_bridges_table.sql  20231026172715_create_proxy_templates_table.sql  20231026172716_create_proxies_table.sql  20231029170203_create_bridges_table.sql
src/: consts.rs  main.rs  utils.rs
src/clients/: bridge_service.rs  kube.rs  mod.rs
src/domains/: auth.rs  bridge.rs  error.rs  mod.rs  organization.rs  organization_member.rs  proxy.rs  proxy_template.rs  region.rs  session.rs  tier.rs  user.rs
src/extractors/: authenticated.rs  authenticated_org_member.rs  authenticated_user.rs  mod.rs
src/managers/: bridge.rs  kube.rs  mod.rs  organization.rs  organization_member.rs  proxy.rs  proxy_template.rs  region.rs  region_connection.rs  session.rs  user.rs
src/repositories/: bridge.rs  mod.rs  organization.rs  organization_member.rs  proxy.rs  proxy_template.rs  regions.rs  session.rs  user.rs
src/routes/: auth.rs  bridge.rs  mod.rs  organization.rs  organization_member.rs  proxy.rs  proxy_template.rs  region.rs
