[package]
name = "ork-mvp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argon2 = "0.5.2"
async-trait = "0.1.74"
axum = { version = "0.6.20", features = ["macros", "tracing"] }
axum-extra = { version = "0.8.0", features = ["cookie-signed"] }
lazy_static = "1.4.0"
log = "0.4.20"
password-hash = "0.5.0"
regex = "1.10.2"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["postgres", "uuid", "runtime-tokio", "migrate", "time"] }
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["serde-human-readable"] }
tokio = { version = "1.33.0", features = ["rt-multi-thread", "macros"] }
tower = { version = "0.4.13", features = ["limit"] }
tower-http = { version = "0.4.4", features = ["trace", "cors", "limit"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
uuid = { version = "1.5.0", features = ["v4", "serde"] }
validator = { version = "0.16.1", features = ["derive"] }
